Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanNumObjField.quorum
class main
    Number n
    boolean bool = false
    action Main
        n:SetValue(7.5)
        bool = cast(boolean, n)
    end
end